--- a/views/instructor/nav.ejs
+++ b/views/instructor/nav.ejs
@@ -1,36 +1,58 @@
-<header>
-  <!--Navigation-->
-  <nav id="nav">
-    <img src="/img/logos/DSK-JF-light-transparent-logo.png" alt="" />
-    <div class="navigation">
-      <!-- nezabat classes -->
-      <div class="secondary-nav">
-        <div class="search">
-          <input type="text" class="input" placeholder="Search..." />
-          <button class="btn"><i class="fas fa-search"></i></button>
-        </div>
-      </div>
-      <div class="items">
+<nav id="nav">
+  <img src="/img/logos/DSK-JF-drak-transparent-logo.png" alt="logo" />
+
+  <div class="navigation">
+    <div class="bell">
+      <button>
         <i class="fas fa-bell"></i>
-        <!-- Replace with your notifications icon -->
-      </div>
-      <div class="profile">
-        <img
-          src="/img/defaultPP.png"
-          alt="user image"
-          onclick="showMenu()"
-          id="profilePic"
-        />
-        <div class="list" id="profileMenu">
-          <ul>
-            <li><a href="#">Profile</a></li>
-            <li><a href="/instructor/settings">Manage your account</a></li>
-            <li><a href="#">Switch account</a></li>
-            <li><a href="#">Add another account</a></li>
-            <li><a href="#">Log out</a></li>
-          </ul>
-        </div>
+      </button>
+    </div>
+
+    <div class="profile">
+      <img
+        src="<%=user.profilePic%>"
+        alt="profile picture"
+        onclick="showMenu()"
+        id="profilePic"
+      />
+      <div class="list" id="list">
+        <ul>
+          <li>
+            <a href="/instructor/<% user._id %>/settings"
+              >Manage your account</a
+            >
+          </li>
+          <li><a href="/logout">Log out</a></li>
+        </ul>
       </div>
     </div>
-  </nav>
-</header>
+  </div>
+</nav>
+<!-- nav on scroll -->
+<script>
+  onscroll = () => {
+    if (window.scrollY > 5) {
+      document.getElementById("nav").classList.add("on-scroll");
+    } else {
+      document.getElementById("nav").classList.remove("on-scroll");
+    }
+  };
+</script>
+<!-- profile-menu -->
+<script>
+  const menu = document.getElementById("list");
+
+  function showMenu() {
+    menu.classList.toggle("active-list");
+  }
+
+  document.addEventListener("click", function (e) {
+    if (
+      menu.classList.contains("active-list") &&
+      !menu.contains(e.target) &&
+      !document.getElementById("profilePic").contains(e.target)
+    ) {
+      menu.classList.remove("active-list");
+    }
+  });
+</script>
