--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -29,11 +29,11 @@
     <main>
       <h1>My Courses</h1>
       <section>
-        <% if(courses){ %>
+        <% if(courses.length > 0){ %>
         <div class="courses-container">
           <% courses.forEach(course=> {%>
           <div class="course-card">
-            <img src="<%=course.coverPic %>" alt="course 1" />
+            <img src="<%=course.coverPic %>" alt="course 1" width="200px" />
             <p class="name"><%=course.title %></p>
             <p>Enrolled <%=course.numberOfStudents%> student</p>
             <p>
@@ -44,7 +44,7 @@
           <% });%>
         </div>
         <% } else {%>
-        <p>No Available courses</p>
+        <p class="no-data">No Available courses</p>
         <% } %>
       </section>
     </main>
