--- a/views/instructor/inner-course.ejs
+++ b/views/instructor/inner-course.ejs
@@ -42,36 +42,18 @@
           <div class="menu-container">
             <button class="btn add" id="add">+ Add / Edit</button>
             <div class="menu" id="menu">
-              <div>
-                <input type="radio" name="material" id="link"/>
-                <label for="link">link</label>
-              </div>
-              <div>
-                <input type="radio" name="material" id="file" />
-                <label for="file">File</label>
-              </div>
-              <div style="white-space: nowrap">
-                <input type="radio" name="material" id="submition" />
-                <label for="submition">Submition</label>
-              </div>
-              <div style="white-space: nowrap">
-                <input type="radio" name="material" id="project" />
-                <label for="project">Project</label>
-              </div>
+              <ul>
+                <li><a href="">Link</a></li>
+                <li><a href="">File</a></li>
+                <li><a href="">Submission</a></li>
+                <li><a href="">Project</a></li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
-      <section class="main">
-         <div class="link">
-
-         </div>
-         <div class="file">
-          add file
-         </div>
-         <div class="submition">
-          add submition
-         </div>
+      <section class="display">
+        display all course content
       </section>
     </main>
 
