--- a/public/css/instructor/inner-course.css
+++ b/public/css/instructor/inner-course.css
@@ -32,26 +32,47 @@
   padding: 6px 16px;
   box-shadow: rgba(83, 89, 100, 0.24) 0px 8px 16px 0px;
   border-radius: 6px;
-  transform: translate(200px,-200px);
+  transform: translate(200px, -200px);
   transition: 0.2s;
   text-align: center;
   z-index: 999;
 }
+.menu {
+  opacity: 0;
+  position: absolute;
+  right: -10px;
+  top: 150%;
+  background-color: #f8f8f8;
+  width: 200px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 7px #bebebe;
+  transition: 0.3s;
+  pointer-events: none;
+}
 .menu.activee {
-  transform: translate(0);
+  top: 110%;
   opacity: 1;
-  user-select: text;
+  pointer-events: all;
+  transform: translate(0);
 }
-.menu div {
-  display: flex;
-  justify-self: flex-start;
-  margin: 10px;
-}
-.menu input {
+.menu ul {
+  list-style: none;
   margin: 0;
-  margin-right: 10px;
-  width: fit-content;
+  padding: 0;
 }
-.main{
+.menu ul li {
+  padding: 13px 10px;
+}
+.menu ul li:hover {
+  background-color: #e4e3e3;
+}
+.menu ul li:not(:last-child) {
+  border-bottom: 1px solid #ddd;
+}
+.menu ul li a {
+  color: black;
+  text-decoration: none;
+}
+.display {
   margin-top: 20px;
 }
