added the link and submission pages

--- a/views/instructor/addLink.ejs
+++ b/views/instructor/addLink.ejs
@@ -32,39 +32,18 @@
                     <div class="add-project-form" id="project">
                         <form action="" method="post">
                             <fieldset>
-                                <legend><span class="number">1</span> Project Info</legend>
+                                <legend><span class="number">1</span> Link Info</legend>
 
-                                <label for="title">Project title:</label>
+                                <label for="title">Link title:</label>
                                 <input type="text" id="title" name="title" />
 
-                                <label for="Deadline">Deadline:</label>
-                                <input type="date" id="deadline" name="deadline" />
                             </fieldset>
                             <fieldset>
-                                <legend><span class="number">2</span> Project details</legend>
+                                <legend><span class="number">2</span> Link details</legend>
 
-                                <label for="description">Description:</label>
-                                <textarea id="description" name="description"></textarea>
-                                <div>
-                                    <label for="numberOfStudentsPerTeam">Number of team members:</label>
-                                    <select name="numberOfStudentsPerTeam" id="numberOfStudentsPerTeam">
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <label for="noOfPhases">Number of phases:</label>
-                                    <select name="noOfPhases" id="noOfPhases">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                    </select>
-                                </div>
-
-                                <label>Rquirments file:</label>
-                                <input type="file" name="requirementsFile" />
+                                <label for="link">Link:</label>
+                                <textarea id="link" name="link"></textarea>
+                                
                             </fieldset>
 
                             <button type="submit" id="submit">Submit</button>
