--- a/views/instructor/inner-course-header.ejs
+++ b/views/instructor/inner-course-header.ejs
@@ -14,9 +14,9 @@
       <button class="btn add" id="add">+ Add / Edit</button>
       <div class="menu" id="menu">
         <ul>
-          <li><a href="">Link</a></li>
+          <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addLink">Link</a></li>
           <li><a href="">File</a></li>
-          <li><a href="">Submission</a></li>
+          <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addSubmission">Submission</a></li>
           <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addProject">Project</a></li>        </ul>
       </div>
     </div>
