--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -210,7 +210,7 @@
           const data = await res.json();
           if (data.msg) {
             return Toastify({
-              text: "updtaed successfully ",
+              text: "updated successfully ",
               duration: 3000,
               gravity: "top",
               close: false,
