--- a/views/instructor/inner-course-header.ejs
+++ b/views/instructor/inner-course-header.ejs
@@ -1,13 +1,7 @@
 <section>
   <div class="title">
     <div>
-      <input
-        type="text"
-        id="title"
-        value="<%= course.title %>"
-        oninput="adjustInputWidth()"
-        readonly
-      />
+      <input type="text" id="title" value="<%= course.title %>" oninput="adjustInputWidth()" readonly />
       <i class="fa-solid fa-pencil pencil" onclick="editTitle()"></i>
     </div>
     <div class="menu-container">
@@ -15,9 +9,10 @@
       <div class="menu" id="menu">
         <ul>
           <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addLink">Link</a></li>
-          <li><a href="">File</a></li>
+          <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addFile">File</a></li>
           <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addSubmission">Submission</a></li>
-          <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addProject">Project</a></li>        </ul>
+          <li><a href="/instructor/<%= user._id %>/<%= course._id %>/addProject">Project</a></li>
+        </ul>
       </div>
     </div>
   </div>
