--- a/views/instructor/addFile.ejs
+++ b/views/instructor/addFile.ejs
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- toastify -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- style sheets -->
     <link rel="stylesheet" href="/css/general.css" />
@@ -18,80 +24,103 @@
     <link rel="stylesheet" href="/css/instructor/inner-course.css" />
     <link rel="stylesheet" href="/css/instructor/addProject.css" />
 
-    <title>
-        <%= course.title %>
-    </title>
-</head>
+    <title><%= course.title %></title>
+  </head>
 
-<body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
+  <body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
     <%- include("./nav.ejs") %>
-        <main>
-            <%- include("./inner-course-header.ejs") %>
-                <section class="display">
-                    <div class="add-project">
-                        <div class="add-project-form" id="project">
-                            <form action="" method="post">
-                                <fieldset>
-                                    <legend><span class="number">1</span> File Info</legend>
+    <main>
+      <%- include("./inner-course-header.ejs") %>
+      <section class="display">
+        <div class="add-project">
+          <div class="add-project-form" id="project">
+            <form id="form">
+              <fieldset>
+                <legend><span class="number">1</span> File details</legend>
+                <label for="filePath">file path:</label>
+                <input
+                  type="file"
+                  name="file"
+                  id="fileToUpload"
+                />
+              </fieldset>
+              <button type="submit" id="submit">Submit</button>
+              <button type="clear" id="clear">Clear</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
 
-                                    <label for="name">File name:</label>
-                                    <input type="text" id="name" name="name" />
+    <!-- editable title -->
+    <script>
+      function adjustInputWidth() {
+        const input = document.getElementById("title");
+        input.style.width = (input.value.length + 1) * 19 + "px";
+      }
 
-                                </fieldset>
-                                <fieldset>
-                                    <legend><span class="number">2</span> File details</legend>
+      function editTitle() {
+        const courseTitle = document.getElementById("title");
+        if (courseTitle.hasAttribute("readonly")) {
+          courseTitle.removeAttribute("readonly");
+          courseTitle.style.borderBottom = "1px solid black";
+        } else {
+          courseTitle.setAttribute("readonly", "true");
+          courseTitle.style.borderBottom = "none";
+        }
+      }
+    </script>
 
-                                    <label for="filePath">file path:</label>
-                                    <input type="file" id="filePath" name="filePath">
+    <script>
+      const menu2 = document.getElementById("menu");
+      const newUserBtn = document.getElementById("add");
 
-                                </fieldset>
+      newUserBtn.addEventListener("click", () => {
+        menu2.classList.toggle("activee");
+      });
 
-                                <button type="submit" id="submit">Submit</button>
-                                <button type="clear" id="clear">Clear</button>
-                            </form>
-                        </div>
-                    </div>
-                </section>
-        </main>
+      document.addEventListener("dblclick", function (e) {
+        if (
+          menu2.classList.contains("activee") &&
+          !menu2.contains(e.target) &&
+          !newUserBtn.contains(e.target)
+        ) {
+          menu2.classList.remove("activee");
+          document.getElementById("form").reset();
+        }
+      });
+    </script>
 
-        <!-- editable title -->
-        <script>
-            function adjustInputWidth() {
-                const input = document.getElementById("title");
-                input.style.width = (input.value.length + 1) * 19 + "px";
-            }
+    <script>
+      document.getElementById("form").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        try {
+          const fileToUpload = document.getElementById("fileToUpload").files[0];
+          const formData = new FormData();
+          formData.append("file", fileToUpload);
 
-            function editTitle() {
-                const courseTitle = document.getElementById("title");
-                if (courseTitle.hasAttribute("readonly")) {
-                    courseTitle.removeAttribute("readonly");
-                    courseTitle.style.borderBottom = "1px solid black";
-                } else {
-                    courseTitle.setAttribute("readonly", "true");
-                    courseTitle.style.borderBottom = "none";
-                }
-            }
-        </script>
+          const res = await fetch("/instructor/addFile/<%= course._id %>", {
+            method: "POST",
+            body: formData,
+          });
 
-        <script>
-            const menu2 = document.getElementById("menu");
-            const newUserBtn = document.getElementById("add");
+          const data = await res.json();
 
-            newUserBtn.addEventListener("click", () => {
-                menu2.classList.toggle("activee");
-            });
-
-            document.addEventListener("dblclick", function (e) {
-                if (
-                    menu2.classList.contains("activee") &&
-                    !menu2.contains(e.target) &&
-                    !newUserBtn.contains(e.target)
-                ) {
-                    menu2.classList.remove("activee");
-                    document.getElementById("form").reset();
-                }
-            });
-        </script>
-</body>
-
+          if (data.msg) {
+            return Toastify({
+              text: "added successfully ",
+              duration: 3000,
+              gravity: "top",
+              close: false,
+              backgroundColor: "green",
+            }).showToast();
+            location.reload();
+          } else location.assign("/error");
+        } catch (err) {
+          console.log(err);
+          location.assign("/error");
+        }
+      });
+    </script>
+  </body>
 </html>
