student settings backend

--- a/views/student/notifications.ejs
+++ b/views/student/notifications.ejs
@@ -18,8 +18,8 @@
     <main>
         <div class="container-xl px-4 mt-4">
             <nav class="nav nav-borders">
-                <li><a class="nav-link" href="/student/settings">Profile</a></li>
-                <li><a class="nav-link" href="/student/security">Security</a></li>
+                <li><a class="nav-link" href="/student/<%= user._id %>/settings">Profile</a></li>
+                <li><a class="nav-link" href="/student/<%= user._id %>/security">Security</a></li>
                 <li><a class="nav-link active" href="#">Notifications</a></li>
             </nav>
             <hr class="mt-0 mb-4" />
