--- a/views/student/settings.ejs
+++ b/views/student/settings.ejs
@@ -36,9 +36,15 @@
       <div class="container-xl px-4 mt-4">
         <nav class="nav nav-borders">
           <li><a class="nav-link active" href="#">Profile</a></li>
-          <li><a class="nav-link" href="/student/security">Security</a></li>
           <li>
-            <a class="nav-link" href="/student/notifications">Notifications</a>
+            <a class="nav-link" href="/student/<%= user._id %>/security"
+              >Security</a
+            >
+          </li>
+          <li>
+            <a class="nav-link" href="/student/<%= user._id %>/notifications"
+              >Notifications</a
+            >
           </li>
         </nav>
         <hr class="mt-0 mb-4" />
@@ -47,23 +53,29 @@
             <div class="card mb-4 mb-xl-0">
               <div class="card-header">Profile Picture</div>
               <div class="card-body text-center">
-                <form>
+                <form id="form1" enctype="multipart/form-data">
                   <label for="fileToUpload">
                     <div
                       class="profile-pic"
                       style="background-image: url(<%=user.profilePic %>)"
                     ></div>
                   </label>
-                  <input type="File" name="fileToUpload" id="fileToUpload" />
+                  <input
+                    type="file"
+                    name="file"
+                    id="fileToUpload"
+                    accept="image/png,image/gif,image/jpeg , image/jpg"
+                  />
+
+                  <div class="small font-italic text-muted mb-4">
+                    JPG or PNG no larger than 5 MB
+                  </div>
+                  <div class="button-container">
+                    <button class="btn btn-primary" id="upload-new-image">
+                      Upload new image
+                    </button>
+                  </div>
                 </form>
-                <div class="small font-italic text-muted mb-4">
-                  JPG or PNG no larger than 5 MB
-                </div>
-                <div class="button-container">
-                  <button class="btn btn-primary" id="upload-new-image">
-                    Upload new image
-                  </button>
-                </div>
               </div>
             </div>
           </div>
@@ -72,7 +84,7 @@
             <div class="card mb-4">
               <div class="card-header">Account Details</div>
               <div class="card-body">
-                <form id="form">
+                <form id="form2">
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
                       <label class="small mb-1" for="firstName"
@@ -83,59 +95,62 @@
                         id="firstName"
                         name="firstName"
                         type="text"
-                        value="<%= user.firstName %>"
+                        value="<%= user.firstName%>"
                       />
-                      <span id="errorFirstName" class="error"></span>
                     </div>
 
                     <div class="col-md-6">
                       <label class="small mb-1" for="lastName">Last name</label>
                       <input
-                        class="form-control"
-                        id="lastName"
-                        name="lastName"
-                        type="text"
-                        value="<%= user.lastName %>"
-                      />
-                      <span id="errorLastName" class="error"></span>
+                      class="form-control"
+                      id="lastName"
+                      name="lastName"
+                      type="text"
+                      value="<%= user.lastName%>"
+                    />
                     </div>
                     <div class="mb-3">
                       <label class="small mb-1" for="email"
                         >Email address</label
                       >
                       <input
-                        class="form-control"
-                        id="email"
-                        name="email"
-                        type="text"
-                        value="<%= user.email%>"
-                      />
-                      <span id="errorEmail" class="error"></span>
+                      class="form-control"
+                      id="email"
+                      name="email"
+                      type="text"
+                      value="<%= user.email%>"
+                    />
                     </div>
                   </div>
-                </form>
+                
                 <div class="row gx-3 mb-3">
                   <div class="col-md-6">
-                    <label class="small mb-1" for="phone">Phone number</label>
+                    <label class="small mb-1" for="phoneNumber">Phone number</label>
                     <input
                       class="form-control"
-                      id="phone"
+                      id="phoneNumber"
+                      name="phoneNumber"
                       type="tel"
                       placeholder="Enter your phone number"
                       value="<%= user.phoneNumber %>"
                     />
                   </div>
                   <div class="col-md-6">
-                    <label class="small mb-1" for="inputBirthday"
+                    <label class="small mb-1" for="birthdayDate"
                       >Birthday</label
                     >
                     <input
                       class="form-control"
-                      id="inputBirthday"
+                      id="birthdayDate"
+                      name="birthdayDate"
                       type="date"
                       value="<%= user.birthdayDate %>"
                     />
                   </div>
+                  <button class="btn btn-primary" id="saveBtn" type="submit">
+                    Save changes
+                  </button>
+                </form>
                 </div>
                 <div class="row gx-3 mb-3">
                   <p>Social Accounts</p>
@@ -144,6 +159,7 @@
                     <input
                       class="form-control"
                       id="facebook"
+                      name="faceBook"
                       type="text"
                       placeholder="Link to Facebook"
                       value="<%= user.facebook %>"
@@ -155,6 +171,7 @@
                     <input
                       class="form-control"
                       id="linkedin"
+                      name="linkedIn"
                       type="text"
                       placeholder="Link to LinkedIn"
                       value="<%= user.linkedin %>"
@@ -166,6 +183,7 @@
                     <input
                       class="form-control"
                       id="github"
+                      name="gitHub"
                       type="text"
                       placeholder="Link to Github"
                       value="<%= user.github %>"
@@ -177,6 +195,7 @@
                     <input
                       class="form-control"
                       id="twitter"
+                      name="twitter"
                       type="text"
                       placeholder="Link to Twitter"
                       value="<%= user.Twitter %>"
@@ -184,11 +203,10 @@
                   </div>
                 </div>
                 <div class="btns">
-                  <button class="btn btn-primary" id="saveBtn" type="submit">
-                    Save changes
-                  </button>
+                
                   <button class="btn clear_btn" type="button">Clear</button>
                 </div>
+          
               </div>
             </div>
           </div>
@@ -196,7 +214,93 @@
       </div>
     </main>
 
+    <script>
+      document.getElementById("form1").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        try {
+          const fileToUpload = document.getElementById("fileToUpload").files[0];
+          const formData = new FormData();
+          formData.append("file", fileToUpload);
+
+          const res = await fetch(
+            "/student/settings/changepp/<%= user._id %>",
+            {
+              method: "POST",
+              body: formData,
+            }
+          );
+
+          const data = await res.json();
+          if (data.msg) location.reload();
+          else if (data.err) location.assign("/error");
+        } catch (err) {
+          console.log(err);
+          location.assign("/error");
+        }
+      });
+    </script>
+
     <script type="module">
+      import { validateForm } from "/js/formValidation.js";
+      const form2 = document.getElementById("form2");
+
+      form2.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const errorMsg = validateForm(form2);
+        if (errorMsg) {
+          return Toastify({
+            text: errorMsg,
+            duration: 3000,
+            gravity: "top",
+            close: false,
+            backgroundColor: "red",
+          }).showToast();
+        }
+
+        try {
+          const res = await fetch(
+            "/student/<%= user._id %>/settings/updatedata",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                email: document.getElementById("email").value,
+                firstName: document.getElementById("firstName").value,
+                lastName: document.getElementById("lastName").value,
+                birthdayDate: document.getElementById("birthdayDate").value,
+                phoneNumber: document.getElementById("phoneNumber").value ,
+              }),
+            }
+          );
+          const data = await res.json();
+          if (data.msg) {
+            return Toastify({
+              text: "updated successfully ",
+              duration: 3000,
+              gravity: "top",
+              close: false,
+              backgroundColor: "green",
+            }).showToast();
+            location.reload();
+          } else if (data.errMsg) {
+            return Toastify({
+              text: data.errMsg,
+              duration: 3000,
+              gravity: "top",
+              close: false,
+              backgroundColor: "red",
+            }).showToast();
+          } else location.assign("/error");
+        } catch (err) {
+          console.log(err);
+          location.assign("/error");
+        }
+      });
+    </script>
+
+    <!-- <script type="module">
       import { validateForm } from "/js/formValidation.js";
 
       const form = document.getElementById("form");
@@ -245,6 +349,6 @@
           console.log(err);
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
