--- a/views/instructor/addFile.ejs
+++ b/views/instructor/addFile.ejs
@@ -45,7 +45,7 @@
                 />
               </fieldset>
               <button type="submit" id="submit">Submit</button>
-              <button type="clear" id="clear">Clear</button>
+              <button type="reset" id="clear">Clear</button>
             </form>
           </div>
         </div>
