--- a/views/instructor/addSubmission.ejs
+++ b/views/instructor/addSubmission.ejs
@@ -58,7 +58,7 @@
               </fieldset>
 
               <button type="submit" id="submit">Submit</button>
-              <button type="clear" id="clear">Clear</button>
+              <button type="reset" id="clear">Clear</button>
             </form>
           </div>
         </div>
